<resources>
    <string name="app_name">WhatsApp</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite o seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="menu_configuracoes">Configuracoes</string>
    <string name="menu_sair">Sair</string>
    <string name="tab_conversas">Conversas</string>
    <string name="tab_contatos">Contatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
</resources>
